[package]
authors = ["u296 <u296b3g@gmail.com>"]
name = "rocketlog_blackpill"
edition = "2021"
version = "0.1.0"

[dependencies]

cortex-m = "0.7"
cortex-m-rt = "0.7"

embedded-hal = "*" # depends on hal, use automatic version
usbd-serial = "0.1.1"
usb-device = "0.2.9"

[dependencies.sx127x_lora]
#path = "/home/todd/code/sx127x_lora"
git = "https://github.com/u296/sx127x_lora"
rev = "e30f62d"


[dependencies.stm32-hal2]

path = "/home/todd/code/stm32-hal"


#git = "https://github.com/u296/stm32-hal"
#rev = ""


features = ["f411", "f4rt", "embedded_hal", "usbotg_fs"]

[dependencies.mpu6050]
git = "https://github.com/u296/mpu6050"
rev = "034e09d"

[profile.dev]
codegen-units = 1
debug = 2
debug-assertions = true
incremental = false
opt-level = 3
overflow-checks = true

# cargo build/run --release
[profile.release]
codegen-units = 1
debug = 2
debug-assertions = false
incremental = false
lto = 'fat'
opt-level = 3
overflow-checks = false
